objects/Country__c.object
<CustomObject>
    <description>ISO 3166 set of worldwide countries, and related ISO codes, used for address data consistency and integrity</description>
    <fields>
        <fullName>Country_Group__c</fullName>
        <label>Country Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Super_Group__c</fullName>
        <label>Country Super Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO3_Code__c</fullName>
        <description>ISO-3 code</description>
        <label>ISO3 Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <description>ISO-2 code</description>
        <label>ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Postal_Code__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies the minimum number of characters a valid postal code can contain (does not directly verify validity).  If this value is 0, postal code for this country is not required.</inlineHelpText>
        <label>Minimum Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Super Region associated with this ISO 3166 Country</inlineHelpText>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>ISO 3166 Countries</relationshipLabel>
        <relationshipName>ISO_3166_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ISO_Code__c</columns>
        <columns>ISO3_Code__c</columns>
        <columns>Country_Group__c</columns>
        <columns>Country_Super_Group__c</columns>
        <columns>Super_Region__c</columns>
        <columns>Minimum_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Country_Group__c</columns>
        <columns>Country_Super_Group__c</columns>
        <columns>Super_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Super_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>